--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Asap:ital@0;1&family=Lato&family=Montserrat&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -72,3 +73,24 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*----------End of Format Reset------------*/
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 27px;
+  width: 27px;
+  font-size: 16px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.social:hover {
+  background-color: #395693;
+  color: #fff;
+  -webkit-transition: 0.1s ease all;
+  transition: 0.1s ease all;
+}
