--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,122 @@
 @import "_mixins.scss";
 @import "_fonts.scss";
 
+.wrapper {
+	display: flex;
+	flex-direction: column;
+}
+
+.header {
+	display: flex;
+	height: 800px;
+	width: 100vw;
+	background: url('../img/header/man_circle.png') 80% no-repeat, url('../img/header/bg_header.png') 50%/cover no-repeat;
+		.upper {
+			width: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			margin: 30px 0 0 0;
+			.logo {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				.name {
+					margin: 10px 0 5px 0;
+					font-family: 'Lato';
+					font-weight: 300;
+					line-height: 16px;
+					text-transform: uppercase;
+					font-size: 15px;
+					letter-spacing: 2.4px;
+				}
+				.description {
+					font-family: Lato;
+					font-size: 6px;
+					font-weight: 400;
+					line-height: 16px;
+					text-transform: uppercase;
+					letter-spacing: 2.04px;
+				}
+			}
+			.navigation {
+				width: 460px;
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				.nav {
+					font-family: 'Asap';
+					color: #4d4d4d;
+					font-size: 15px;
+					text-transform: uppercase;
+					height: 20px;
+					&:hover {
+						color: black;
+						border-bottom: 2px solid #000000;
+					}
+				}
+			}
+		}
+		.info {
+			margin: 175px 0 0 0;
+			.name {
+				.myname {
+					color: #4d4d4d;
+					font-family: 'Asap';
+					font-size: 90px;
+					font-weight: 700;
+					line-height: 67px;
+					margin: 0 0 5px 0;
+				}
+				.mywork {
+					color: #4d4d4d;
+					font-family: 'Asap';
+					font-size: 22px;
+					font-weight: 500;
+					line-height: 67px;
+					opacity: 0.54;
+				}
+			}
+		}
+		.buttons {
+			margin: 30px 0 0 0;
+			width: 340px;
+			display: flex;
+			justify-content: space-between;
+			.button {
+				
+				&:hover {
+					border: none;
+					background: #fff;
+					box-shadow: 0 18px 27px 2px rgba(0, 0, 0, 0.1);
+					transition: 0.7s ease all;
+				}
+			}
+		}
+
+}
+
+.button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 160px;
+	height: 50px;
+	color: #4d4d4d;
+	font-family: 'Asap';
+	font-weight: 500;
+	text-transform: uppercase;
+	font-size: 16px;
+	letter-spacing: 0.96px;
+	border: 1px solid #4d4d4d;
+	transition: 0.7s ease all;
+}
+
+.container {
+	width: 80vw;
+	margin: 0 auto;
+}
+
 
 
 .social {
@@ -17,6 +133,6 @@
 	&:hover {
 		background-color: #395693;
 		color: #fff;
-		transition: 0.1s ease all;
+		transition: 0.3s ease all;
 	}
 }
