--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap:ital@0;1&family=Lato&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,700;1,400&family=Lato&family=Montserrat&display=swap');
