--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,34 @@ h1, h2, h3, h4, h5, h6 {
 /*----------End of Format Reset------------*/
 html {
   font-size: 1px;
+  scroll-behavior: smooth;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+.wrapper {
+  max-width: 100vw;
+}
+
+#upbutton {
+  background: url("../img/topbutton.jpg") no-repeat top left;
+  height: 41px;
+  width: 45px;
+  bottom: 30px;
+  right: 30px;
+  cursor: pointer;
+  display: none;
+  position: fixed;
+  z-index: 999;
+  -webkit-box-shadow: 0 18px 27px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 18px 27px 2px rgba(0, 0, 0, 0.1);
+}
+
+#upbutton:hover {
+  -webkit-filter: brightness(90%);
+          filter: brightness(90%);
+  -webkit-transition: 0.2s ease all;
+  transition: 0.2s ease all;
 }
 
 .wrapper {
@@ -357,6 +385,7 @@ html {
 .services {
   height: 700px;
   background-color: #f6f6f6;
+  width: 100vw;
 }
 
 .services .container {
@@ -433,6 +462,7 @@ html {
 .skills {
   height: 766px;
   background: url("../img/skills/graph.png") 50% 65% no-repeat;
+  width: 100vw;
 }
 
 .skills .container {
@@ -456,6 +486,7 @@ html {
 .portfolio {
   height: 1095px;
   background-color: #f6f6f6;
+  width: 100vw;
 }
 
 .portfolio .button {
@@ -533,6 +564,10 @@ html {
   left: 40%;
 }
 
+.testimonials {
+  width: 100vw;
+}
+
 .testimonials .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -562,10 +597,10 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -575,18 +610,97 @@ html {
   position: relative;
 }
 
+.testimonials .bio__prevbutton {
+  width: 5%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.338);
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  opacity: 0.2;
+  position: relative;
+  z-index: 2;
+}
+
+.testimonials .bio__prevbutton:hover {
+  opacity: 0.3;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.testimonials .bio__prevbutton:after {
+  content: '';
+  display: inline-block;
+  background-color: black;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 47%;
+  left: 25%;
+  z-index: 1;
+  color: #000;
+}
+
+.testimonials .bio__nextbutton {
+  width: 5%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.338);
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  opacity: 0.2;
+  position: relative;
+  z-index: 2;
+}
+
+.testimonials .bio__nextbutton:hover {
+  opacity: 0.3;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.testimonials .bio__nextbutton:after {
+  content: '';
+  display: inline-block;
+  background-color: black;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 47%;
+  left: 25%;
+  z-index: 1;
+  color: #000;
+}
+
 .testimonials .bio__row {
+  display: none;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-transition: 1s ease all;
+  transition: 1s ease all;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0;
+          flex: 1 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.testimonials .bio .active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: colu;
-          flex-direction: colu;
+  -webkit-transition: 1s ease all;
+  transition: 1s ease all;
 }
 
 .testimonials .bio__img {
   margin: 0 30px 0 0;
+  max-width: 159px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .testimonials .bio__column {
@@ -631,8 +745,8 @@ html {
 
 .testimonials .bio .slider {
   position: absolute;
-  top: 85%;
-  left: 48%;
+  top: 88%;
+  left: 47%;
 }
 
 .testimonials .bio .slider__option {
@@ -640,6 +754,10 @@ html {
   width: 13px;
   height: 13px;
   border: 1px solid #212121;
+}
+
+.testimonials .bio .slider .active {
+  background-color: #4f4f4f;
 }
 
 .testimonials .results {
@@ -722,6 +840,7 @@ html {
 .contact {
   height: 795px;
   background: url("../img/contact/contact_bg.png") 50%/cover no-repeat;
+  width: 100vw;
 }
 
 .contact .container {
@@ -865,6 +984,13 @@ html {
       align-self: center;
   padding: 20px 30px;
   width: 125px;
+}
+
+.contact .form__button:hover {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
+  -webkit-transition: 0.2s ease all;
+  transition: 0.2s ease all;
 }
 
 .contact .form__button .sendimg {
