--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,30 @@
 
 html {
 	font-size: 1px;
+	scroll-behavior: smooth;
+	max-width: 100vw;
+	overflow-x: hidden
+}
+
+.wrapper {
+	max-width: 100vw;
+}
+
+#upbutton {
+	background: url("../img/topbutton.jpg") no-repeat top left;
+	height: 41px;
+	width: 45px;
+	bottom: 30px;
+	right: 30px;
+	cursor: pointer;
+	display: none;
+	position: fixed;
+	z-index: 999;
+	box-shadow: 0 18px 27px 2px rgba(0, 0, 0, 0.1);
+	&:hover {
+		filter: brightness(90%);
+		transition: 0.2s ease all;
+	}
 }
 
 .wrapper {
@@ -218,6 +242,7 @@ html {
 .services {
 	height: 700px;
 	background-color: #f6f6f6;
+	width: 100vw;
 
 	.container {
 		display: flex;
@@ -271,6 +296,7 @@ html {
 .skills {
 	height: 766px;
 	background: url('../img/skills/graph.png') 50% 65% no-repeat;
+	width: 100vw;
 	.container {
 		display: flex;
 		justify-content: center;
@@ -287,7 +313,7 @@ html {
 .portfolio {
 	height: 1095px;
 	background-color: #f6f6f6;
-
+	width: 100vw;
 	
 
 	.button {
@@ -339,6 +365,7 @@ html {
 }
 
 .testimonials {
+	width: 100vw;
 	.container {
 		display: flex;
 		flex-direction: column;
@@ -359,18 +386,81 @@ html {
 		width: 955px;
 		height: 350px;
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		justify-content: center;
 		align-items: center;
 		position: relative;
 
-		&__row {
-			display: flex;
-			flex-direction: colu;
+		&__prevbutton {
+			width: 5%;
+			height: 100%;
+			background: rgba(0, 0, 0, 0.338);
+			align-self: start;
+			opacity: 0.2;
+			position: relative;
+			z-index: 2;
+			&:hover {
+				opacity: 0.3;
+				transition: 0.3s all;
+			}
+			&:after {
+				content: '';
+				display: inline-block;
+				background-color: rgb(0, 0, 0);
+				height: 20px;
+				width: 20px;
+				position: absolute;
+				top: 47%;
+				left: 25%;
+				z-index: 1;
+				color: #000;
+			}
 		}
+
+		&__nextbutton {
+			width: 5%;
+			height: 100%;
+			background: rgba(0, 0, 0, 0.338);
+			align-self: start;
+			opacity: 0.2;
+			position: relative;
+			z-index: 2;
+			&:hover {
+				opacity: 0.3;
+				transition: 0.3s all;
+			}
+			&:after {
+				content: '';
+				display: inline-block;
+				background-color: rgb(0, 0, 0);
+				height: 20px;
+				width: 20px;
+				position: absolute;
+				top: 47%;
+				left: 25%;
+				z-index: 1;
+				color: #000;
+			}
+		}
+
+		&__row {
+			display: none;
+			flex-direction: row;
+			transition: 1s ease all;
+			flex: 1 0;
+			justify-content: center;
+		}
+
+		& .active {
+			display: flex;
+			transition: 1s ease all;
+		}
+		
 
 		&__img {
 			margin: 0 30px 0 0;
+			max-width: 159px;
+			object-fit: cover;
 		}
 
 		&__column {
@@ -410,14 +500,17 @@ html {
 
 		.slider {
 			position: absolute;
-			top: 85%;
-			left: 48%;
+			top:88%;
+			left: 47%;
 
 			&__option {
 				display: inline-block;
 				width: 13px;
 				height: 13px;
 				border: 1px solid #212121;
+			}
+			& .active {
+				background-color: #4f4f4f;
 			}
 		}
 	}
@@ -485,6 +578,7 @@ html {
 .contact {
 	height: 795px;
 	background: url('../img/contact/contact_bg.png') 50%/cover no-repeat;
+	width: 100vw;
 	.container {
 		max-width: 770px;
 		display: flex;
@@ -598,6 +692,10 @@ html {
 			align-self: center;
 			padding: 20px 30px;
 			width: 125px;
+			&:hover {
+				filter: brightness(85%);
+				transition: 0.2s ease all;
+			}
 			.sendimg {
 				margin: 0 0 0 5px;
 			}
